tests/ui/impl-trait/trait_upcasting_reference_mismatch.stderr
error[E0282]: type annotations needed
  --> $DIR/trait_upcasting_reference_mismatch.rs:7:35
   |
LL | fn hello() -> &'static (dyn Trait<impl Sized> + Send) {
   |                                   ^^^^^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
